--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "db:push": "drizzle-kit push:mysql"
   },
   "dependencies": {
+    "@planetscale/database": "1.7.0",
     "@t3-oss/env-nextjs": "0.4.1",
     "@tanstack/react-query": "4.29.15",
     "@trpc/client": "10.32.0",
@@ -16,6 +18,9 @@
     "@trpc/react-query": "10.32.0",
     "@trpc/server": "10.32.0",
     "@vercel/analytics": "1.0.1",
+    "drizzle-orm": "0.27.0",
+    "drizzle-zod": "0.4.4",
+    "nanoid": "4.0.2",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -32,6 +37,8 @@
     "@typescript-eslint/eslint-plugin": "5.60.0",
     "@typescript-eslint/parser": "5.60.0",
     "autoprefixer": "10.4.14",
+    "dotenv": "16.3.1",
+    "drizzle-kit": "0.19.2",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "postcss": "8.4.24",
