--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
+NODE_ENV="development"
+DATABASE_URL="mysql://user:password@host/db?ssl={"rejectUnauthorized":true}"
+
