--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@clerk/nextjs": "4.21.13",
     "@planetscale/database": "1.8.0",
+    "@radix-ui/react-icons": "1.3.0",
     "@t3-oss/env-nextjs": "0.6.0",
     "@tanstack/react-query": "4.29.19",
     "@vercel/analytics": "1.0.1",
+    "class-variance-authority": "0.6.1",
+    "clsx": "1.2.1",
     "drizzle-orm": "0.27.0",
     "drizzle-zod": "0.4.4",
     "nanoid": "4.0.2",
@@ -22,7 +25,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-type-animation": "3.1.0",
-    "tailwind-merge": "1.13.2",
+    "tailwind-merge": "^1.13.2",
+    "tailwindcss-animate": "^1.0.6",
     "zod": "3.21.4"
   },
   "devDependencies": {
