--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/nextjs": "4.21.13",
     "@planetscale/database": "1.8.0",
     "@radix-ui/react-icons": "1.3.0",
+    "@radix-ui/react-slot": "1.0.2",
     "@t3-oss/env-nextjs": "0.6.0",
     "@tanstack/react-query": "4.29.19",
     "@vercel/analytics": "1.0.1",
@@ -20,6 +21,7 @@
     "clsx": "1.2.1",
     "drizzle-orm": "0.27.0",
     "drizzle-zod": "0.4.4",
+    "lucide-react": "0.257.0",
     "nanoid": "4.0.2",
     "next": "13.4.7",
     "react": "18.2.0",
