--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/nextjs": "4.21.13",
     "@planetscale/database": "1.8.0",
+    "@radix-ui/react-dropdown-menu": "2.0.5",
     "@radix-ui/react-icons": "1.3.0",
     "@radix-ui/react-slot": "1.0.2",
     "@t3-oss/env-nextjs": "0.6.0",
@@ -24,6 +25,7 @@
     "lucide-react": "0.257.0",
     "nanoid": "4.0.2",
     "next": "13.4.7",
+    "next-themes": "0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-type-animation": "3.1.0",
