--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@clerk/nextjs": "4.21.13",
+    "@clerk/themes": "1.7.5",
     "@planetscale/database": "1.8.0",
+    "@radix-ui/react-avatar": "1.0.3",
     "@radix-ui/react-dropdown-menu": "2.0.5",
     "@radix-ui/react-icons": "1.3.0",
     "@radix-ui/react-slot": "1.0.2",
