--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "zod": "3.21.4"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "4.0.2",
     "@types/eslint": "8.40.2",
     "@types/node": "18.16.19",
     "@types/prettier": "2.7.3",
