--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@planetscale/database": "1.8.0",
     "@radix-ui/react-avatar": "1.0.3",
     "@radix-ui/react-dropdown-menu": "2.0.5",
+    "@radix-ui/react-scroll-area": "1.0.4",
     "@radix-ui/react-slot": "1.0.2",
     "@t3-oss/env-nextjs": "0.6.0",
     "@tanstack/react-query": "4.29.19",
