--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-dropdown-menu": "2.0.5",
     "@radix-ui/react-scroll-area": "1.0.4",
     "@radix-ui/react-slot": "1.0.2",
+    "@radix-ui/react-toast": "1.1.4",
     "@t3-oss/env-nextjs": "0.6.0",
     "@tanstack/react-query": "4.29.19",
     "@vercel/analytics": "1.0.1",
