--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-type-animation": "3.1.0",
-    "tailwind-merge": "^1.13.2",
-    "tailwindcss-animate": "^1.0.6",
+    "tailwind-merge": "1.13.2",
+    "tailwindcss-animate": "1.0.6",
     "zod": "3.21.4"
   },
   "devDependencies": {
