--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@clerk/nextjs": "4.21.14",
     "@clerk/themes": "1.7.5",
+    "@formkit/auto-animate": "0.7.0",
     "@planetscale/database": "1.8.0",
     "@radix-ui/react-avatar": "1.0.3",
     "@radix-ui/react-dropdown-menu": "2.0.5",
