--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@
 # NEXT_PUBLIC_CLIENTVAR="bar"
 NODE_ENV="development"
 DATABASE_URL="mysql://user:password@host/db?ssl={"rejectUnauthorized":true}"
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="pk_test"
 CLERK_SECRET_KEY="sk_test"
 
