--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.0.2",
+    "@total-typescript/ts-reset": "0.4.2",
     "@types/eslint": "8.44.0",
     "@types/node": "18.16.19",
     "@types/react": "18.2.14",
