--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "dependencies": {
     "@clerk/nextjs": "4.22.0",
     "@formkit/auto-animate": "0.7.0",
+    "@hookform/resolvers": "3.1.1",
     "@planetscale/database": "1.8.0",
     "@radix-ui/react-avatar": "1.0.3",
+    "@radix-ui/react-dialog": "1.0.4",
     "@radix-ui/react-dropdown-menu": "2.0.5",
+    "@radix-ui/react-label": "2.0.2",
+    "@radix-ui/react-popover": "1.0.6",
     "@radix-ui/react-scroll-area": "1.0.4",
     "@radix-ui/react-slot": "1.0.2",
     "@radix-ui/react-toast": "1.1.4",
@@ -23,6 +27,7 @@
     "@vercel/analytics": "1.0.1",
     "class-variance-authority": "0.6.1",
     "clsx": "2.0.0",
+    "date-fns": "2.30.0",
     "drizzle-orm": "0.27.2",
     "drizzle-zod": "0.4.4",
     "lucide-react": "0.260.0",
@@ -30,7 +35,9 @@
     "next": "13.4.10",
     "next-themes": "0.2.1",
     "react": "18.2.0",
+    "react-day-picker": "8.8.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "7.45.1",
     "react-type-animation": "3.1.0",
     "tailwind-merge": "1.14.0",
     "tailwindcss-animate": "1.0.6",
