--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@
 NODE_ENV="development"
 DATABASE_URL="mysql://user:password@host/db?ssl={"rejectUnauthorized":true}"
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="pk_test"
-CLERK_SECRET_KEY="sk_test"
-
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=""
+CLERK_SECRET_KEY=""
+UPLOADTHING_APP_ID=""
+UPLOADTHING_SECRET=""
