--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-slot": "1.0.2",
     "@radix-ui/react-toast": "1.1.4",
     "@t3-oss/env-nextjs": "0.6.0",
+    "@uploadthing/react": "5.2.0",
     "@vercel/analytics": "1.0.1",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
@@ -42,6 +43,7 @@
     "react-type-animation": "3.1.0",
     "tailwind-merge": "1.14.0",
     "tailwindcss-animate": "1.0.6",
+    "uploadthing": "5.2.1",
     "zod": "3.21.4"
   },
   "devDependencies": {
