--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@formkit/auto-animate": "0.7.0",
     "@hookform/resolvers": "3.1.1",
     "@planetscale/database": "1.9.0",
+    "@radix-ui/react-alert-dialog": "1.0.4",
     "@radix-ui/react-avatar": "1.0.3",
     "@radix-ui/react-dialog": "1.0.4",
     "@radix-ui/react-dropdown-menu": "2.0.5",
