--- a/.env.example
+++ b/.env.example
@@ -17,5 +17,7 @@ DATABASE_URL="mysql://user:password@host/db?ssl={"rejectUnauthorized":true}"
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=""
 CLERK_SECRET_KEY=""
-UPLOADTHING_APP_ID=""
-UPLOADTHING_SECRET=""
+R2_DOMAIN=""
+R2_ACCOUNT_ID=""
+R2_KEY=""
+R2_SECRET=""
