--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "3.379.1",
+    "@aws-sdk/s3-request-presigner": "3.379.1",
     "@clerk/nextjs": "4.23.1",
     "@formkit/auto-animate": "0.7.0",
     "@hookform/resolvers": "3.1.1",
@@ -26,7 +28,6 @@
     "@radix-ui/react-slot": "1.0.2",
     "@radix-ui/react-toast": "1.1.4",
     "@t3-oss/env-nextjs": "0.6.0",
-    "@uploadthing/react": "5.2.0",
     "@vercel/analytics": "1.0.1",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
@@ -44,7 +45,6 @@
     "react-type-animation": "3.1.0",
     "tailwind-merge": "1.14.0",
     "tailwindcss-animate": "1.0.6",
-    "uploadthing": "5.2.1",
     "zod": "3.21.4"
   },
   "devDependencies": {
