--- a/components.json
+++ b/components.json
@@ -4,7 +4,7 @@
   "rsc": true,
   "tailwind": {
     "config": "tailwind.config.ts",
-    "css": "./src/styles/globals.css",
+    "css": "./styles/globals.css",
     "baseColor": "zinc",
     "cssVariables": true
   },
