--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
-    "db:push": "drizzle-kit push:mysql",
-    "db:studio": "drizzle-kit studio"
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.427.0",
@@ -17,6 +17,8 @@
     "@formkit/auto-animate": "0.8.0",
     "@hookform/resolvers": "3.3.1",
     "@planetscale/database": "1.11.0",
+    "@prisma/adapter-planetscale": "5.4.3",
+    "@prisma/client": "5.4.2",
     "@radix-ui/react-alert-dialog": "1.0.5",
     "@radix-ui/react-avatar": "1.0.4",
     "@radix-ui/react-dialog": "1.0.5",
@@ -32,8 +34,6 @@
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
     "date-fns": "2.30.0",
-    "drizzle-orm": "0.28.6",
-    "drizzle-zod": "0.5.1",
     "lucide-react": "0.284.0",
     "nanoid": "5.0.1",
     "next": "13.5.4",
@@ -58,12 +58,12 @@
     "@typescript-eslint/parser": "6.7.4",
     "autoprefixer": "10.4.16",
     "dotenv": "16.3.1",
-    "drizzle-kit": "0.19.13",
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.4",
     "postcss": "8.4.31",
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "0.5.5",
+    "prisma": "5.4.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
