--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "next lint",
     "start": "next start",
     "db:push": "prisma db push",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.428.0",
