--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "3.435.0",
-    "@aws-sdk/s3-request-presigner": "3.435.0",
+    "@aws-sdk/client-s3": "3.437.0",
+    "@aws-sdk/s3-request-presigner": "3.437.0",
     "@clerk/nextjs": "4.26.0",
     "@formkit/auto-animate": "0.8.0",
     "@hookform/resolvers": "3.3.2",
     "@planetscale/database": "1.11.0",
-    "@prisma/adapter-planetscale": "5.5.1-dev.1",
-    "@prisma/client": "5.5.1-dev.1",
+    "@prisma/adapter-planetscale": "5.5.2",
+    "@prisma/client": "5.5.2",
     "@radix-ui/react-alert-dialog": "1.0.5",
     "@radix-ui/react-avatar": "1.0.4",
     "@radix-ui/react-dialog": "1.0.5",
@@ -35,7 +35,7 @@
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
     "date-fns": "2.30.0",
-    "lucide-react": "0.288.0",
+    "lucide-react": "0.289.0",
     "nanoid": "5.0.2",
     "next": "14.0.0",
     "next-themes": "0.2.1",
@@ -52,8 +52,8 @@
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
     "@total-typescript/ts-reset": "0.5.1",
     "@types/eslint": "8.44.6",
-    "@types/node": "20.8.8",
-    "@types/react": "18.2.31",
+    "@types/node": "20.8.9",
+    "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
     "@typescript-eslint/eslint-plugin": "6.9.0",
     "@typescript-eslint/parser": "6.9.0",
@@ -64,8 +64,8 @@
     "postcss": "8.4.31",
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "0.5.6",
-    "prisma": "5.5.1-dev.1",
-    "tailwindcss": "3.3.4",
+    "prisma": "5.5.2",
+    "tailwindcss": "3.3.5",
     "typescript": "5.2.2"
   }
 }
