Back in src folder

--- a/components.json
+++ b/components.json
@@ -4,12 +4,12 @@
   "rsc": true,
   "tailwind": {
     "config": "tailwind.config.ts",
-    "css": "./styles/globals.css",
+    "css": "./src/styles/globals.css",
     "baseColor": "zinc",
     "cssVariables": true
   },
   "aliases": {
-    "components": "~/components",
-    "utils": "~/utils"
+    "components": "~/app/_components",
+    "utils": "~/lib/utils"
   }
 }
