--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "7.48.2",
     "react-type-animation": "3.2.0",
+    "server-only": "0.0.1",
     "superjson": "2.2.1",
     "tailwind-merge": "2.0.0",
     "tailwindcss-animate": "1.0.7",
@@ -75,7 +76,7 @@
     "typescript": "5.3.2"
   },
   "ct3aMetadata": {
-    "initVersion": "7.22.0"
+    "initVersion": "7.24.0"
   },
   "packageManager": "pnpm@8.10.5"
 }
